PP-14727 update response type